<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rakutenDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="webSerch_input_title">タイトル</string>
    <string name="webSerch_input_author">著者名</string>
    <string name="webSerch_input_publisher">出版社</string>
    <string name="webSerch_input_isbn">ISBN</string>
    <string name="webSerch_exec_button">検索</string>

    <string name="webSerch_conn_url_head">https://app.rakuten.co.jp/services/api/BooksBook/Search/20130522?format=xml&amp;</string>
    <string name="webSerch_conn_url_tail">&amp;applicationId=1066904167385245120</string>

    <string name="webSerch_queryBuild_ContentWrapper">"</string>
    <string name="webSerch_queryBuild_Spacer"> </string>

    <string name="rakutenTag_title">title</string>
    <string name="rakutenTag_author">author</string>
    <string name="rakutenTag_publisher">publisherName</string>
    <string name="rakutenTag_isbn">isbn</string>
    <string name="rakutenTag_Hatsubaibi">salesDate</string>
    <string name="rakutenTag_price">itemPrice</string>
    <string name="rakutenTag_imageURL_S">smallImageUrl</string>
    <string name="rakutenTag_imageURL_M">mediumImageUrl</string>
    <string name="rakutenTag_imageURL_L">largeImageUrl</string>

</resources>
