<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RakutenDemoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/webSerchCond_title"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:editable="true"
                android:enabled="true"
                android:inputType="text"
                android:text="@string/webSerch_input_title"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/webSerchCond_author"
                android:layout_gravity="right"
                android:inputType="text"
                android:textSize="24sp"
                android:text="@string/webSerch_input_author"
                android:autoText="false"
                android:editable="true"
                android:enabled="true"
                android:layout_marginLeft="10dp"
                android:gravity="start" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/webSerchCond_publisher"
                android:layout_gravity="right"
                android:text="@string/webSerch_input_publisher"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:editable="true"
                android:enabled="true"
                android:gravity="start|right"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/webSerchCond_isbn"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:editable="true"
                android:enabled="true"
                android:inputType="text"
                android:text="@string/webSerch_input_isbn"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/webSerch_exec_button"
            android:id="@+id/webSerchExec"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/webSerch_resultItemList" />
    </LinearLayout>

</RelativeLayout>
